--- a/dashboard/templates/components/dashboard_leftsidebar.html
+++ b/dashboard/templates/components/dashboard_leftsidebar.html
@@ -76,6 +76,7 @@
                                             Services
                                         </a>
                                     </li>
+                                    {% comment %}
                                     <li
                                         class="nav-item component-navbar-nav-item component-navbar-private-nav-item"
                                     >
@@ -93,6 +94,7 @@
                                             Refill
                                         </a>
                                     </li>
+                                    {% endcomment %}
                                     <li
                                         class="nav-item component-navbar-nav-item component-navbar-private-nav-item"
                                     >
@@ -349,6 +351,7 @@
                                 >
                             </a>
                         </li>
+                        {% comment %}
                         <li class="component-sidebar__menu-item">
                             <a
                                 class="component-sidebar__menu-item-link"
@@ -362,6 +365,7 @@
                                 >
                             </a>
                         </li>
+                        {% endcomment %}
                         <li class="component-sidebar__menu-item">
                             <a
                                 class="component-sidebar__menu-item-link"
