--- a/dashboard/templates/components/dashboard_rightformcontainer.html
+++ b/dashboard/templates/components/dashboard_rightformcontainer.html
@@ -8,7 +8,7 @@
                     target="_blank"
                 >
                     <img
-                        src="{% static promotional_image %}"
+                        src="https://promotionmaro.com/media/{%  promotional_image %}"
                         class="img-fluid"
                     />
                 </a>
